# deploy-test

./: main.py  pyproject.toml  startup.sh
.chainlit/: config.toml
.github/workflows/: main_web-app-eacl-001.yml
public/: theme.json
