[project]
name = "deploy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "asyncpg>=0.31.0",
    "azure-identity>=1.25.3",
    "azure-storage-file-datalake>=12.23.0",
    "chainlit>=2.10.0",
    "greenlet>=3.3.2",
    "ollama>=0.6.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
]
